# swarmops

./: .gitignore  README.md  install.sh
projects/hl-bot-v2/backend/: .env.example  .gitignore  CELERY_WORKERS.md  CELERY_WORKERS_COMPLETE.md  CSV_IMPORT_README.md  DATA_MODELS_COMPLETE.md  DATA_RETENTION_POLICY.md  Dockerfile  Makefile  PDF_PROCESSOR_IMPLEMENTATION.md  PLAYBACK_CONTROLS_COMPLETE.md  POSITION_MONITOR_IMPLEMENTATION.md  POSITION_RISK_COMPLETE.md  README.md  README_LEARNING_LOOP.md  SETUP_COMPLETE.md  TASK_COMPLETE_data-models.md  TASK_COMPLETE_position-mgr.md  TASK_COMPLETE_signal-gen.md  TEST_RESULTS.md  TIMEFRAME_ALIGNMENT_COMPLETE.md  TRADE_REASONER_COMPLETE.md  YOUTUBE_PROCESSOR_COMPLETE.md  alembic.ini  claude_desktop_config.example.json  pyproject.toml  pytest.ini  test_db_connection.py  worker.py
projects/hl-bot-v2/backend/app/: __init__.py  celery_app.py  config.py  main.py
projects/hl-bot-v2/backend/app/db/: __init__.py  init.sql  models.py  session.py
projects/hl-bot-v2/backend/app/services/: __init__.py  data_sync.py  hyperliquid_data.py
projects/hl-bot-v2/backend/app/workers/: __init__.py  tasks.py
projects/hl-bot-v2/backend/db/: init.sql
projects/hl-bot-v2/backend/examples/: README.md  backtest_example.py  confluence_example.py  csv_import_example.py  hyperliquid_example.py  market_structure_example.py  pdf_processor_example.py  position_monitor_example.py  sample_tradingview.csv  signal_generator_example.py  youtube_ingestion_example.py  zones_example.py
projects/hl-bot-v2/backend/scripts/: learn_strategy.py  process_local_videos.py  run_backtest_stream.py  run_mcp_server.sh  setup_timescaledb_policies.py  sync_data.py
projects/hl-bot-v2/backend/src/hl_bot/: __init__.py  config.py  dependencies.py  main.py  types.py
projects/hl-bot-v2/backend/tests/: conftest.py  conftest_db.py  test_candle_patterns.py  test_celery_tasks.py  test_csv_importer.py  test_market_structure.py  test_pdf_processor.py  test_zones.py
projects/hl-bot-v2/backend/tests/integration/: README.md  TASK_COMPLETE_api-tests.md  conftest.py  test_api.py  test_api_comprehensive.py  test_api_validation.py  test_data_sync.py  test_ohlcv_repository.py  test_websocket.py
projects/hl-bot-v2/backend/tests/trading/: test_backtest.py  test_mcp_server.py  test_playback_controls.py  test_position_monitor.py  test_position_tracker.py  test_risk_manager.py
projects/hl-bot-v2/backend/tests/unit/: conftest.py  test_config.py  test_hyperliquid_client.py  test_hyperliquid_data.py  test_image_analyzer.py  test_learning_service.py  test_llm_client.py  test_mcp_server.py  test_ohlcv_data.py  test_ohlcv_repository.py  test_position_tracker.py  test_risk_manager.py  test_strategy_extractor.py  test_timeframes.py  test_trade_reasoner.py  test_youtube_processor.py
projects/hyperliquid-trading-bot-suite/backend/: =10.0.0  BACKTEST_STATISTICS_SUMMARY.md  CORE_MODELS_SUMMARY.md  DATABASE.md  Dockerfile  Dockerfile.prod  WEBSOCKET_API.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_client_standalone.py  test_confluence_basic.py  test_cycle_classifier.py  test_cycle_simple.py  test_pdf_standalone.py  test_position_manager.py  test_reasoner_final.py  test_trade_reasoner.py  test_trade_reasoner_direct.py  test_trade_reasoner_simple.py  test_websocket_client.py  tsconfig.json  verify_backtest_engine.py  verify_backtest_statistics.py  verify_confluence_scorer.py  verify_feedback_loop.py  verify_orchestrator.py  verify_orchestrator_simple.py  verify_outcome_analyzer.py  verify_pdf_processor.py  verify_trade_reasoner.py
projects/hyperliquid-trading-bot-suite/backend/alembic/: env.py
projects/hyperliquid-trading-bot-suite/backend/alembic/versions/: 20260210_1251_initial_database_schema.py
projects/hyperliquid-trading-bot-suite/backend/docs/: HYPERLIQUID_MCP_CLIENT.md
projects/hyperliquid-trading-bot-suite/backend/scripts/: manage_migrations.py  setup_database.py
projects/hyperliquid-trading-bot-suite/backend/sql/: init_db.sql  useful_queries.sql
projects/hyperliquid-trading-bot-suite/backend/src/: __init__.py  config.py
projects/hyperliquid-trading-bot-suite/backend/src/api/: README.md  main.py
projects/hyperliquid-trading-bot-suite/backend/src/backtest/: __init__.py  backtest_engine.py  data_loader.py  statistics.py
projects/hyperliquid-trading-bot-suite/backend/src/database/: __init__.py  models.py
projects/hyperliquid-trading-bot-suite/backend/src/detection/: CONFLUENCE_SCORER_COMPLETE.md  CONFLUENCE_SCORER_README.md  __init__.py  (+6 more)
projects/hyperliquid-trading-bot-suite/backend/tests/: conftest.py  test_backtest_engine.py  test_backtest_statistics.py  test_confluence_scorer.py  test_data_loader.py  test_data_loader_simple.py  test_feedback_loop.py  test_ingestion_orchestrator.py  test_knowledge_repository.py  test_llm_extractor.py  test_market_structure.py  test_outcome_analyzer.py  test_pdf_processor.py  test_trade_reasoner.py
(+607 files in other folders)
