[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperliquid-trading-bot-suite"
version = "0.1.0"
description = "AI-powered trading system that learns strategies from educational content"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Hyperliquid Bot", email = "bot@example.com"}]
license = {text = "MIT"}

dependencies = [
    # FastAPI and web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    
    # Database and caching
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "pgvector>=0.2.0",
    
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    
    # PDF processing
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "pillow>=10.0.0",
    
    # Video processing
    "yt-dlp>=2023.10.13",
    "openai-whisper>=20231117",
    "ffmpeg-python>=0.2.0",
    "imagehash>=4.3.1",
    
    # LLM and AI
    "anthropic>=0.7.0",
    "openai>=1.3.0",
    "httpx>=0.25.0",
    
    # Async and utilities
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "python-json-logger>=2.0.0",
    
    # Math and statistics
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "ta>=0.10.2",
    
    # Hyperliquid integration
    "aiohttp>=3.9.0",
    "cryptography>=41.0.0",
    "eth-account>=0.10.0",
    
    # Testing and development
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",  # for testing FastAPI
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

performance = [
    "cython>=3.0.0",
    "numba>=0.58.0",
    "uvloop>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "W", "C", "N", "UP", "S", "B", "A", "C4", "DJ", "EM", "ICN", "PIE", "T20", "Q"]
ignore = ["S101", "S311"]  # Allow assert statements and random
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]